config/deploy/envs/aws/tdock/globalid/globalid/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $NAMESPACE-globalid-graphql-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: $SECURITY_GROUP
    alb.ingress.kubernetes.io/certificate-arn: $CERTIFICATE_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: ${NAMESPACE} # Identifier used to group multiple ingresses in single ALB
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: 200,301,302,404
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
spec:
  rules:
  - host: globalid-graphql.$NAMESPACE.$CLUSTER.$DOMAIN
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: $SSL_PATH
        pathType: ImplementationSpecific
      - backend:
          service:
            name: globalid-graphql
            port:
              name: http
        path: /*
        pathType: ImplementationSpecific
